--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
     "gatsby-plugin-material-ui": "^2.1.10",
     "gatsby-plugin-mdx": "^1.8.0",
     "gatsby-plugin-postcss": "^3.5.0",
+    "gatsby-plugin-react-helmet": "^3.8.0",
     "gatsby-source-filesystem": "^2.9.0",
     "gatsby-transformer-remark": "^2.14.0",
     "postcss": "^8.2.3",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-helmet": "^6.1.0",
     "tailwindcss": "^2.0.2"
   }
 }
